--- a/configure.in
+++ b/configure.in
@@ -1176,6 +1176,14 @@ then
 	mv libtool.new libtool
 fi
 
+dnl On some versions of OS X, the libtool config erroneusly finds "Print" and
+dnl tries to use it as "print -r --".  Replace this with "printf %s\\n".
+if ( test -r "libtool" -a -n "$DARWIN" )
+then
+	sed -e "s|print -r --|printf %s\\\\\\\\n|g" libtool > libtool.new
+	mv libtool.new libtool
+fi
+
 
 dnl Summary.
 echo
