--- a/test/sqlrelay.conf.in
+++ b/test/sqlrelay.conf.in
@@ -154,8 +154,7 @@
 		<auths>
 			<auth module="userlist">
 				<user user="test"
-					password="juij"
-					passwordencryptionid="rot16"/>
+					password="[/usr/local/firstworks/etc/sqlrelay.con.d/extensions/test.pwd]"/>
 				<user user="rot16test"
 					password="hej72juij"
 					passwordencryptionid="rot16"/>
@@ -281,7 +280,7 @@
 			<logger module="slowqueries"/>
 		</loggers>
 		<connections>
-                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=juijfqiimeht;lastinsertidfunction=last_insert_id();droptemptables=yes;faketransactionblocks=yes;autocommit=yes;fetchatonce=5;maxselectlistsize=-1;maxitembuffersize=6000" passwordencryptionid="rot16"/>
+                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=[/usr/local/firstworks/etc/sqlrelay.conf.d/extensions/testuser.pwd];lastinsertidfunction=last_insert_id();droptemptables=yes;faketransactionblocks=yes;autocommit=yes;fetchatonce=5;maxselectlistsize=-1;maxitembuffersize=6000" passwordencryptionid="rot16"/>
 		</connections>
 	</instance>
 
