ports from 1.9 branch

--- a/src/common/defines.h.in
+++ b/src/common/defines.h.in
@@ -51,6 +51,7 @@
 #define GET_CURRENT_SCHEMA 37
 #define NEXT_RESULT_SET 38
 #define GETTABLELIST2 39
+#define MAXCOMMAND 39
 
 #define SUSPENDED_RESULT_SET 1
 #define NO_SUSPENDED_RESULT_SET 0
