--- a/test/sqlrelay.conf.in
+++ b/test/sqlrelay.conf.in
@@ -330,4 +330,18 @@
 		</connections>
 	</instance>
 
+	<instance id="tdsprotocoltest" dbase="odbc">
+		<listeners>
+			<listener protocol="tds" port="1433"/>
+		</listeners>
+		<auths>
+			<auth module="userlist">
+				<user user="testuser" password="testpassword"/>
+			</auth>
+		</auths>
+		<connections>
+			<connection string="dsn=mssqlodbc;user=testuser;password=testpassword"/>
+		</connections>
+	</instance>
+
 </instances>
