--- a/test/testall.sh.in
+++ b/test/testall.sh.in
@@ -42,7 +42,7 @@ fi
 sleep 2
 
 # for each database/configuration...
-for DB in  @TESTDBS@
+for DB in @TESTDBS@
 do
 
 	# for tls, krb, and extensions tests, verify that we support oracle
@@ -179,6 +179,24 @@ do
 			if ( test "$DB" = "mysqlprotocol" )
 			then
 				./dropin/mysql
+				if ( test "$?" = "0" )
+				then
+					printf "    % 8s: success\n" "dropin" >> testresults.log
+				else
+					printf "    % 8s: failed\n" "dropin" >> testresults.log
+				fi
+			elif ( test "$DB" = "postgresqlprotocol" )
+			then
+				./dropin/postgresql
+				if ( test "$?" = "0" )
+				then
+					printf "    % 8s: success\n" "dropin" >> testresults.log
+				else
+					printf "    % 8s: failed\n" "dropin" >> testresults.log
+				fi
+			elif ( test "$DB" = "tdsprotocol" )
+			then
+				./dropin/tds
 				if ( test "$?" = "0" )
 				then
 					printf "    % 8s: success\n" "dropin" >> testresults.log
