--- a/test/testall.sh.in
+++ b/test/testall.sh.in
@@ -132,6 +132,27 @@ do
 			then
 				PING="The database is up."
 			fi
+		elif ( test "$DB" = "postgresqlprotocol" )
+		then
+			PING="0: Couldn't connect to the listener."
+			if ( test -n "`netstat -an 2> /dev/null | grep LISTEN | grep 5432`" )
+			then
+				PING="The database is up."
+			fi
+		elif ( test "$DB" = "tdsprotocol" )
+		then
+			PING="0: Couldn't connect to the listener."
+			if ( test -n "`netstat -an 2> /dev/null | grep LISTEN | grep 1433`" )
+			then
+				PING="The database is up."
+			fi
+		elif ( test "$DB" = "oracleprotocol" )
+		then
+			PING="0: Couldn't connect to the listener."
+			if ( test -n "`netstat -an 2> /dev/null | grep LISTEN | grep 1521`" )
+			then
+				PING="The database is up."
+			fi
 		else
 			PING=`$PREFIX/bin/sqlrsh -id ${DB}test -command ping 2>&1`
 		fi
@@ -197,6 +218,15 @@ do
 			elif ( test "$DB" = "tdsprotocol" )
 			then
 				./dropin/tds
+				if ( test "$?" = "0" )
+				then
+					printf "    % 8s: success\n" "dropin" >> testresults.log
+				else
+					printf "    % 8s: failed\n" "dropin" >> testresults.log
+				fi
+			elif ( test "$DB" = "oracleprotocol" )
+			then
+				./dropin/oracle
 				if ( test "$?" = "0" )
 				then
 					printf "    % 8s: success\n" "dropin" >> testresults.log
