added teradata protocol/auth to public distro

--- a/src/auths/Makefile
+++ b/src/auths/Makefile
@@ -19,6 +19,7 @@ all-base: $(SQLR)auth_userlist.$(LIBEXT) \
 		$(SQLR)auth_mysql_database.$(LIBEXT) \
 		$(SQLR)auth_postgresql_userlist.$(LIBEXT) \
 		$(SQLR)auth_oracle_userlist.$(LIBEXT) \
+		$(SQLR)auth_teradata_sidechannel.$(LIBEXT) \
 
 all-sqlrelay: $(SQLR)auth_sqlrelay.$(LIBEXT)
 
@@ -49,6 +50,9 @@ $(SQLR)auth_postgresql_userlist.$(LIBEXT): postgresql_userlist.cpp postgresql_us
 
 $(SQLR)auth_oracle_userlist.$(LIBEXT): oracle_userlist.cpp oracle_userlist.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ oracle_userlist.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
+$(SQLR)auth_teradata_sidechannel.$(LIBEXT): teradata_sidechannel.cpp teradata_sidechannel.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ teradata_sidechannel.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
 install: $(INSTALLLIB)
 
