updated postgresql test

--- a/config.mk.in
+++ b/config.mk.in
@@ -792,7 +792,7 @@ ifneq ($(HAVE_MONO),)
 	TESTALLSUBDIRS += all-cs
 endif
 
-CPPTESTCPPFLAGS = $(BASECPPFLAGS) -I$(includedir) $(RUDIMENTSINCLUDES)
+CPPTESTCPPFLAGS = $(BASECPPFLAGS) -I$(includedir) $(RUDIMENTSINCLUDES) -I$(top_builddir)
 CPPTESTLIBS = -L$(libdir) -l$(SQLR)client $(RUDIMENTSLIBS) $(LIBEFENCE)
 
 CTESTCPPFLAGS = $(BASECPPFLAGS) -I$(includedir) $(RUDIMENTSINCLUDES)
