--- a/test/protocol/Makefile
+++ b/test/protocol/Makefile
@@ -4,16 +4,26 @@ include ../../config.mk
 
 .SUFFIXES: .lo
 
-all:
+all: all-mysql all-postgresql
+
+all-mysql: 
 	cd mysql $(AND) $(MAKE) all
-	cd oracle $(AND) $(MAKE) all
+
+all-postgresql:
 	cd postgresql $(AND) $(MAKE) all
+
+all-tds:
 	cd tds $(AND) $(MAKE) all
+
+all-oracle:
+	cd oracle $(AND) $(MAKE) all
+
+all-teradata:
 	cd teradata $(AND) $(MAKE) all
 
 clean:
 	cd mysql $(AND) $(MAKE) clean
-	cd oracle $(AND) $(MAKE) clean
 	cd postgresql $(AND) $(MAKE) clean
 	cd tds $(AND) $(MAKE) clean
+	cd oracle $(AND) $(MAKE) clean
 	cd teradata $(AND) $(MAKE) clean
