--- a/config.mk.in
+++ b/config.mk.in
@@ -789,7 +789,14 @@ endif
 # tests
 TESTALLSUBDIRS = all-c all-cpp all-java all-protocol all-stress all-tcl
 ifneq ($(HAVE_MONO),)
-	TESTALLSUBDIRS += all-cs
+TESTALLSUBDIRS += all-cs
+endif
+TESTPROTOCOLSUBDIRS =
+ifneq ($(strip $(MYSQLLIBS)),)
+TESTPROTOCOLSUBDIRS += all-mysql
+endif
+ifneq ($(strip $(POSTGRESQLLIBS)),)
+TESTPROTOCOLSUBDIRS += all-postgresql
 endif
 
 CPPTESTCPPFLAGS = $(BASECPPFLAGS) -I$(includedir) $(RUDIMENTSINCLUDES) -I$(top_builddir)
@@ -867,9 +874,9 @@ endif
 
 
 APIALLSUBDIRS =
-APICLEANSUBDIRS = clean-cpp clean-c clean-cs clean-mysql clean-postgresql clean-odbc clean-python clean-perl clean-ruby clean-php clean-phppdo clean-java clean-jdbc clean-tcl clean-erlang
+APICLEANSUBDIRS = clean-cpp clean-c clean-cs clean-odbc clean-python clean-perl clean-ruby clean-php clean-phppdo clean-java clean-jdbc clean-tcl clean-erlang
 APIINSTALLSUBDIRS =
-APIUNINSTALLSUBDIRS = uninstall-cpp uninstall-c uninstall-cs uninstall-mysql uninstall-postgresql uninstall-odbc uninstall-java uninstall-jdbc
+APIUNINSTALLSUBDIRS = uninstall-cpp uninstall-c uninstall-cs uninstall-odbc uninstall-java uninstall-jdbc
 ifneq ($(ENABLE_CPP),)
 APIALLSUBDIRS += all-cpp all-c
 APIINSTALLSUBDIRS += install-cpp install-c
