--- a/test/sqlrelay.conf.d/freetds.conf.in
+++ b/test/sqlrelay.conf.d/freetds.conf.in
@@ -6,7 +6,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="freetds=/usr/local/firstworks/etc/sqlrelay.conf.d/freetds;server=sap;user=testuser;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="freetds=@abs_top_builddir@/test/sqlrelay.conf.d/freetds;server=sap;user=testuser;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
