added a mssql test

--- a/test/sqlrelay.conf.d/freetds/etc/freetds.conf
+++ b/test/sqlrelay.conf.d/freetds/etc/freetds.conf
@@ -1,11 +1,10 @@
 [global]
 	tds version = auto
-	debug flags = 0xffff
-	dump file = /tmp/freetds.log
 
 [sap]
 	host = sap
 	port = 5000
+	;tds version = 5.0
 
 [mssql2005]
 	host = mssql2005
