--- a/test/sqlrelay.conf.d/tls.conf.in
+++ b/test/sqlrelay.conf.d/tls.conf.in
@@ -4,10 +4,10 @@
 	<instance id="tlstest" port="9000"
 		socket="/tmp/test.socket"
 		tls="yes"
-		tlscert="/usr/local/firstworks/etc/sqlrelay.conf.d/server.pem"
+		tlscert="@abs_top_builddir@/test/sqlrelay.conf.d/tls/server.pem"
 		tlspassword="password"
 		tlsvalidate="yes"
-		tlsca="/usr/local/firstworks/etc/sqlrelay.conf.d/ca.pem">
+		tlsca="@abs_top_builddir@/test/sqlrelay.conf.d/tls/ca.pem">
 		<users>
 			<user user="client.localdomain"/>
 		</users>
