--- a/test/testall.sh.in
+++ b/test/testall.sh.in
@@ -108,15 +108,15 @@ do
 	# for the router test, start the master/slave instances
 	if ( test "$DB" = "router" )
 	then
-		$PREFIX/bin/sqlr-start -config `pwd`/sqlrelay.conf.d/${DB}.conf -id routermaster -backtrace `pwd`
+		$PREFIX/bin/sqlr-start -config @abs_top_builddir@/sqlrelay.conf.d/${DB}.conf -id routermaster -backtrace @abs_top_builddir@
 		sleep 2
 
-		$PREFIX/bin/sqlr-start -config `pwd`/sqlrelay.conf.d/${DB}.conf -id routerslave -backtrace `pwd`
+		$PREFIX/bin/sqlr-start -config @abs_top_builddir@/sqlrelay.conf.d/${DB}.conf -id routerslave -backtrace @abs_top_builddir@
 		sleep 2
 	fi
 
 	# start the instance
-	$PREFIX/bin/sqlr-start -config `pwd`/sqlrelay.conf.d/${DB}.conf -id ${DB}test -backtrace `pwd`
+	$PREFIX/bin/sqlr-start -config @abs_top_builddir@/sqlrelay.conf.d/${DB}.conf -id ${DB}test -backtrace @abs_top_builddir@
 	sleep 2
 
 	# make sure that the instance is up
@@ -168,7 +168,6 @@ do
 				PING="The database is up."
 			fi
 		else
-			CURRENTDIR=`pwd`
 			PING=`$PREFIX/bin/sqlrsh -config @abs_top_builddir@/test/sqlrelay.conf.d/${DB}.conf -id ${DB}test -command ping 2>&1`
 		fi
 
@@ -282,13 +281,15 @@ do
 	if ( test "$DB" = "router" )
 	then
 		sleep 2
-		$PREFIX/bin/sqlr-stop -config `pwd`/sqlrelay.conf.d/${DB}.conf -id routermaster
+		$PREFIX/bin/sqlr-stop -config @abs_top_builddir@/sqlrelay.conf.d/${DB}.conf -id routermaster
 		sleep 2
-		$PREFIX/bin/sqlr-stop -config `pwd`/sqlrelay.conf.d/${DB}.conf -id routerslave
+		$PREFIX/bin/sqlr-stop -config @abs_top_builddir@/sqlrelay.conf.d/${DB}.conf -id routerslave
 	fi
 	sleep 2
-	$PREFIX/bin/sqlr-stop -config `pwd`/sqlrelay.conf.d/${DB}.conf -id ${DB}test
+	$PREFIX/bin/sqlr-stop -config @abs_top_builddir@/sqlrelay.conf.d/${DB}.conf -id ${DB}test
 	sleep 2
+
+	rm -f log/*.log
 
 	echo
 	echo "================================================================================"
