--- a/test/Makefile
+++ b/test/Makefile
@@ -41,7 +41,7 @@ clean:
 	cd ruby $(AND) $(MAKE) clean
 	cd stress $(AND) $(MAKE) clean
 	cd tcl $(AND) $(MAKE) clean
-	$(RM) sqlr-*.*.bt sybinit.err log/*.log
+	$(RM) sqlr-*.*.bt sybinit.err log/*.log sqlrelay.conf.d/sqlite/sqlite.db
 
 tests: all
 	$(SCRIPTINT) $(THISDIR)testall$(SCRIPTEXT)
